fixing bugs for the dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,13 @@
   box-sizing: border-box;
 }
 
+.dark {
+  --bg: #0f172a;
+  --textColor: #ddd;
+  --softBg: #1f273a;
+  --softTextColor: #a6a6a6;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
